force-app/main/default/objects/ProductEventPrice__c/ProductEventPrice__c.object-meta.xml
<CustomObject>
    <label>품목별 행사가</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>