force-app/main/default/objects/ProductEventPrice__c/fields/CostPrice__c.field-meta.xml
<CustomField>
    <fullName>CostPrice__c</fullName>
    <label>Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>