force-app/main/default/objects/ProductEventPrice__c/fields/EventPrice__c.field-meta.xml
<CustomField>
    <fullName>EventPrice__c</fullName>
    <label>Event Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>