force-app/main/default/objects/ProductEventPrice__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Product Event Price</relationshipLabel>
    <relationshipName>ProductEventPrice</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>