force-app/main/default/objects/ProductEventPrice__c/fields/ProductEvent__c.field-meta.xml
<CustomField>
    <fullName>ProductEvent__c</fullName>
    <label>Product Event</label>
    <referenceTo>ProductEvent__c</referenceTo>
    <relationshipLabel>Product Event Price</relationshipLabel>
    <relationshipName>ProductEventPrice</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>