force-app/main/default/objects/ProductEventPrice__c/fields/PurchaseLower__c.field-meta.xml
<CustomField>
    <fullName>PurchaseLower__c</fullName>
    <description>빈칸이면 제한 없음</description>
    <label>Purchase Lower</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>